--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,12 @@ body {
   visibility: hidden;
 }
 
+#playground {
+  border: 1px solid red;
+  margin: 2em;
+  width: 400px;
+}
+
 svg {
   /* width: 100%; */
   width: 800px;
