--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,8 @@
   font-family: "Astro";
   src: url("fonts/Astro.woff"),
        url("fonts/Astro.ttf");
-  /* font-weight: normal; */
-  /* font-style: normal; */
 }
 
-/* @font-face {
-  font-family: 'Astro';
-  src: url('Astro.ttf') format('truetype');
-} */
 
 [class^="hermetica-"], [class*=" hermetica-"] {
   color: black;
@@ -19,30 +13,43 @@
 body {
   background: #aaa;
 }
-
 .hide {
   visibility: hidden;
 }
-
 #playground {
   border: 1px solid red;
   margin: 2em;
   width: 200px;
 }
 
-svg {
-  /* width: 100%; */
-  width: 800px;
-  border: 1px solid black;
-}
 
+svg {
+  transform: rotate(-90deg);
+  width: 100vw;
+  /* width: 800px; */
+  border: 1px solid black;
+  
+  /* margin-top: 100px; */
+}
+svg path {
+  fill-rule: nonzero;
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
 svg text {
   font-family: 'Astro';
-  font-size: 72px;
-  fill: white;
+  font-size: 108px;
+  fill: #fff;
   stroke: none;
+  text-anchor: middle;
 }
-
+[class$="text"] {
+  display: none;
+}
+[class$="text-vert"] {
+  display: block;
+  dominant-baseline: central;
+}
 svg a {
   cursor: pointer;
 }
@@ -50,7 +57,6 @@ svg a {
 .coords {
   stroke: gray;
 }
-
 .coords-text {
   font-family: sans-serif;
   font-size: 1em;
@@ -58,35 +64,38 @@ svg a {
 
 [id$="triangle"] {
   stroke: white;
-  /* comment out stroke when polygons dome */
   stroke-width: 0.01px;
+}
+[id$="line"] {
+  fill: none;
+  stroke: white;
 }
 [id$="label"] {
   fill: none;
   stroke: white;
   stroke-width: 0.83px;
 }
+[id$="circle"] {
+  fill: none;
+  stroke: white;
+  stroke-width: 1.25px;
+}
 [id$="group"]:hover {
   opacity: 0.5;
 }
 
-[id^="car"] {
+[class^="cardinal"] {
   fill: rgb(204,0,0);
   stroke: white;
 }
-
-[id^="fix"] {
+[class^="fixed"] {
   fill: rgb(102,102,255);
   stroke: white;
 }
-
-[id^="mut"] {
+[class^="mutable"] {
   fill: rgb(0,153,0);
   stroke: white;
 }
-
-#radial stop:first-child { stop-color:rgb(255,153,51); }
-#radial stop:last-child  { stop-color:rgb(204,0,0); }
 
 #radial-1 stop:first-child { stop-color:rgb(255,153,51); }
 #radial-1 stop:last-child  { stop-color:rgb(204,0,0); }
@@ -94,7 +103,7 @@ svg a {
 #radial-2 stop:first-child { stop-color:rgb(102,51,102); }
 #radial-2 stop:last-child  { stop-color:rgb(102,102,255); }
 
-#radial-3 stop:first-child { stop-color:black; }
+#radial-3 stop:first-child { stop-color:rgb(0,0,0); }
 #radial-3 stop:last-child  { stop-color:rgb(0,153,0); }
 
 #radial-4 stop:first-child { stop-color:rgb(255,255,51); }
@@ -110,13 +119,18 @@ svg a {
 #radial-7 stop:last-child  { stop-color:rgb(255,255,255); }
 
 
-/* dump? */
-[id$="line"] {
-  fill: none;
-  stroke: white;
-}
-[id$="circle"] {
-  fill: none;
-  stroke: white;
-  stroke-width: 0.83px;
+@media only screen and (min-width: 600px) {
+
+  svg {
+    width: 100%;
+    height: auto;
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  [class$="text"] {
+    display: block;
+  }
+  [class$="text-vert"] {
+    display: none;
+  }
 }
